TIP529 image metadata: group all optional features in a chapter at the end.

--- a/tip/529.md
+++ b/tip/529.md
@@ -32,7 +32,7 @@ This metadata should be accessible and setable for the following aims:
 This TIP specially targets the resolution (DPI) value of the image.
 
 The image resolution included in an image file is crucial for its usage, as many applications (word & co.) use this field to calculate a default size.
-One may enjoy, that image files used in pdf4tcl are automatically scaled at the right resolution (e.g. the resolution saved in the image file).
+One may imagine, that image files used in pdf4tcl are automatically scaled at the right resolution (e.g. the resolution saved in the image file).
 
 This information is included in png files (supported by tk core) and many other image formats included in the Img patch.
 
@@ -45,15 +45,6 @@ This may be expressed (when all packages are adopted) by:
     myimage configure -metadata [dict create DPI 300.0]
     myimage write file.bmp
 
-I was just contacted by Paul Obermaier (TkImg maintainer) to extend the upper patch to other image formats.
-This motivated me again to work on the implementation.
-
-## XMP data
-
-Photo images may contain an XMP data structure which may hold structured data.
-The aim is to make this data accessible.
-The parsing of the XML structure is not part of this TIP and may be done by other packages.
-
 ## Comment data
 
 A comment may be used to save custom data in the image file.
@@ -61,63 +52,7 @@ A comment may be used to save custom data in the image file.
 An example is a vision automation project where a test procedure is connected to each image.
 My solution is to use GIF images and to store the test procedure (a TCL script) in the gif comment.
 
-## Optional propositions
-
-The following additional aims are on option of this TIP.
-They are specified in the section "Specification of optional functionality" below.
-
-   *   Optimize operations by storing intermediate image representations. Due to that, the metadata dict may be the 3rd source (beside -file and -data options) for image data.
-   *   Pass additional data to the image format driver where the "-format" option extension is not suitable.
-   *   Optimize the SVG processing to store the preparsed binary blob in the metadata. This blob may be used for fast scaling of the image.
-   *   Optimize file access: allow the image driver to indicate, that the file is not needed any more after the match call.
-   *   Prepare a future extension to call only the match function. In consequence, the match function may return metadata.
-   *   Optimize driver internal communication: provide a DString memory to the image format driver to pass data from the match functions to the read functions.
-
-### Intermediate Image representation
-
-The application is within the current SVG implementation included in Tk8.7a3.
-
-The used svg routines from the nanosvg project split svg processing into two steps:
-
-   *   Step 1: transform the xml data to a binary representation of the splines
-   *   Step 2: render the splines to an image presentation
-
-When svg files are loaded by:
-
-    image create photo i1 -file test.svg -format {svg -scaletoheight 16}
-
-then the file is accessed and the xml data loaded and processing step 1 and 2 is performed.
-
-When the image is scaled by:
-
-    i1 configure -file "" -data {<svg source="metadata" >} -format {svg -scaletoheight 32}
-
-then the same steps are performed as on image load, while only step 2 would be necessary.
-The performance is poor and the file must still be available.
-
-The idea is to store the binary representation of the splines (result of processing step 1) as a key in the **-metadata** dict (say SVGBLOB) and to achieve to only perform step 2 on scaling.
-
-In addition, svg image may even be "compiled" to the metadata structure, so the following command may work:
-
-    image create i1 -metadata {SVGBLOB ...}  -data {<svg source="metadata" >}-format {svg -scaletoheight 32}
-
-This will only work within the same patchlevel of TK on the same architecture (endianess, int size) , as the format may change, but it may be useful for example when packing to a starkit.
-
-In my talk on ETCL 2019, I showed an Android GUI where buttons may be scaled by a pinch to zoom gesture. The current performance is quite poor.
-
-### Extended image format driver interface
-
-Additional possibilities in the image driver interface are proposed:
-
-   *   A DString memory may be used by the match procedure to pass data to the read procedure
-   *   The file match procedure may flag that the file read procedure will not need the file any more.
-
-The rationale for both are the current implementation of the SVG driver:
-
-   *   The driver currently uses ThreadSpecific data to pass data from the match procedure to the read procedure. Due to that, a more simple alternate possibility is proposed.
-   *   The driver does not need the file any more after the match procedure. Thus, any preparing file operations (seek etc) may be omitted and a NULL channel may be passed.
-
-### Preview extension for new command "image find"
+## Preview extension for new command "image find"
 
 The match functions should also be able to output the metadata dict.
 This is due to the plan by Paul Obermeier to make the match function alone available on the script level.
@@ -134,16 +69,15 @@ The following default keys are proposed:
 
 | Key       | Description      | Example image formats |
 |:---------:|:----------------:|:---------------------:|
-| `DPI`     | Horizontal Image resolution in DPI (double) | png                   |
-| `aspect`  | Aspect ratio horizontal/vertical (double)   | gif                   |
-| `comment` | Text comment     | gif                   |
-| `XMP`     | xmp image data   | gif,png               |
+| `DPI`     | Horizontal Image resolution in DPI (double) | png |
+| `aspect`  | Aspect ratio horizontal/vertical (double)   | png,gif |
+| `comment` | Text comment     | png, gif |
 
 Comments on the key choice:
 
-   *   Abreviation are in capital letters
-   *   Words are in Americal English in English (small) case
-   *   Vertical DPI is expressed as DPI/aspect. The reason is, that some image formats only feature aspect and no dpi.
+   *   Abreviation are in upper case
+   *   Words are in Americal English in small case (except propper nouns)
+   *   Vertical DPI is expressed as DPI/aspect. The reason is, that some image formats may feature aspect and no resolution value.
 
 It is valid to set any key within the application.
 Any unknown key should be ignored by the application and image format drivers.
@@ -343,6 +277,10 @@ A typical driver code snipped to check for a metadata key is:
         Tcl_Obj *itemData;
         Tcl_DictObjGet(interp, metadataIn, Tcl_NewStringObj("Comment",-1), &itemData));
 
+The receiving of the metadata by the format driver functions is only necessary for the Write functions to fulfill strictly the objective of the TIP.
+Nevertheless, it is implemented the same way as the -format parameter which is available to all functions.
+The reason is to support use cases not specified jet.
+My feeling is, that it would be sad to limit the functionality by not passing the metadata to all format driver functions.
 
 ### Receive a metadata dict from the driver (FileRead,StringRead)
 
@@ -359,24 +297,6 @@ A sample driver code snippet is:
     if (NULL != metadataOut) {
         Tcl_DictObjPut(NULL, metadataOut, Tcl_NewStringObj("XMP",-1), Tcl_NewStringObj(xmpMetadata);
 
-### Optional feature: Receive a metadata dict from the driver (FileMatch,StringMatch)
-
-Paul Obermeier has asked for this feature.
-The plan is to create a new tcl function "image find" which only calls the match function and returns the size and the (so far) received metadata.
-
-### Optional feature: match and read function communication memory
-
-The match functions and the image read functions get an additional parameter "driverInternalPtr" which points to an initialized DString.
-The DString is cleared by the framework.
-
-Using this DString, the driver match function may pass data to its read function.
-
-### Optional feature: flag that the match function does not need the channel any more
-
-The driver file match function may flag, that it does not need the channel any more.
-Only in this case, the additional output int "closeChannel" should be set to 1.
-In this case, a NULL driver is passed to the read driver function.
-
 ### Image format driver interface
 
 For image format drivers, a new registration procedure is proposed which includes functions with the new parameters.
@@ -388,86 +308,62 @@ The new stubs enabled function is:
 
 The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
 
-	int (Tk_ImageFileMatchProcVersion3) (Tcl_Interp *interp, Tcl_Channel chan,
-		const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr,
-		int *heightPtr, Tcl_Obj *metadataOut, int *closeChannelPtr,
-		Tcl_DString *driverInternalPtr);
+    int (Tk_ImageFileMatchProcVersion3) (Tcl_Interp *interp, Tcl_Channel chan,
+            const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr,
+            int *heightPtr, Tcl_Obj *metadataOut,);
 
-	int (Tk_ImageStringMatchProcVersion3) (Tcl_Interp *interp, Tcl_Obj *dataObj,
-		Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr, int *heightPtr,
-		Tcl_Obj *metadataOut, Tcl_DString *driverInternalPtr);
+    int (Tk_ImageStringMatchProcVersion3) (Tcl_Interp *interp, Tcl_Obj *dataObj,
+            Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr, int *heightPtr,
+            Tcl_Obj *metadataOut);
 
-	int (Tk_ImageFileReadProcVersion3) (Tcl_Interp *interp, Tcl_Channel chan,
-		const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn,
-		Tk_PhotoHandle imageHandle,
-		int destX, int destY, int width, int height, int srcX, int srcY,
-		Tcl_Obj *metadataOut, Tcl_DString *driverInternalPtr);
+    int (Tk_ImageFileReadProcVersion3) (Tcl_Interp *interp, Tcl_Channel chan,
+            const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn,
+            Tk_PhotoHandle imageHandle, int destX, int destY, int width,
+            int height, int srcX, int srcY, Tcl_Obj *metadataOut);
 
-	int (Tk_ImageStringReadProcVersion3) (Tcl_Interp *interp, Tcl_Obj *dataObj,
-		Tcl_Obj *format, Tcl_Obj *metadataIn, Tk_PhotoHandle imageHandle,
-		int destX, int destY, int width, int height, int srcX, int srcY,
-		Tcl_Obj *metadataOut, Tcl_DString *driverInternalPtr);
+    int (Tk_ImageStringReadProcVersion3) (Tcl_Interp *interp, Tcl_Obj *dataObj,
+            Tcl_Obj *format, Tcl_Obj *metadataIn, Tk_PhotoHandle imageHandle,
+            int destX, int destY, int width, int height, int srcX, int srcY,
+            Tcl_Obj *metadataOut);
 
-	int (Tk_ImageFileWriteProcVersion3) (Tcl_Interp *interp, const char *fileName,
-		Tcl_Obj *format, Tcl_Obj *metadataIn, Tk_PhotoImageBlock *blockPtr);
+    int (Tk_ImageFileWriteProcVersion3) (Tcl_Interp *interp, const char *fileName,
+            Tcl_Obj *format, Tcl_Obj *metadataIn, Tk_PhotoImageBlock *blockPtr);
 
-	int (Tk_ImageStringWriteProcVersion3) (Tcl_Interp *interp, Tcl_sObj *format,
-		Tcl_Obj *metadataIn, Tk_PhotoImageBlock *blockPtr);
-
-## Optional feature: SVG optimization
-
-The svg driver returns a preparsed image blob in the metadata key "SVGBLOB".
-This data is used as image data, if the -data parameter contains the string "\<svg data=\"metadata\" />".
-
-A sample script is as follows:
-
-    image create photo foo -data $svggradient -format svg
-    foo configure -file "" -data "\<svg data=\\"metadata\\" />" -format "svg -scale 2"
-
-Internally, the driver uses the driver internal DString to communicate between the match and read functions.
-
-The output of the svg parser is serialized in arrays and put into the memory block.
-All functions of the rendering functions dealing with the input data are changed to use the array.
-
-I see only a small speed-up (around 10%) by this solution. My test script is as follows:
-
-   *   take the file from [https://svgstudio.com/pages/free-sample]
-   *   use the following script:
-   
-   image create photo foo -file Freesample.svg -format svg
-    proc switch {} {
-        foo configure -format {svg -scale 2}
-        foo configure -format {svg -scale 1}
-    }
-    time switch 100
-    40139.367 microseconds per iteration
-    
-    * now activate the use of the metadata
-    
-    foo configure -file "" -data "<svg data=\"metadata\" />" -format "svg"
-    38641.935 microseconds per iteration
-
-For me, even removing the file operations and the parsing should be a magnitude faster.
-But the facts are different.
-Apparently copying all this data around in addition takes a lot of time.
-And the svg-nano parser is super fast.
+    int (Tk_ImageStringWriteProcVersion3) (Tcl_Interp *interp, Tcl_sObj *format,
+            Tcl_Obj *metadataIn, Tk_PhotoImageBlock *blockPtr);
 
 # Implementation
 
-Implementation is in tag tip-529-image-metadata.
+Implementation is in branch "tip-529-image-metadata".
 The following metadata keys are implemented:
 
-   * gif: comment, XMP
+   * gif: comment
    * png: DPI, ratio
 
 Thanks to Paul Obermaier, the TkImg package has implemented the new interface and uses it currently for DPI setting and reporting.
 
 A set of test cases is included in the implementation.
 In addition, the TkImg package features additional tests for this patch which exercise additional features like stub table, image parameters.
+The TkImg patch links currently against the optional branch (see below), not against the branch tag tip-529-image-metadata.
 
 It was necessary to fix the file tests/earth.gif as the file is incomplete.
 
 # Rejected Alternatives
+
+## single metadata parameter for input and output
+
+A first approach was to use one metadata parameter to the format driver functions which allowed combined input and output.
+The properties are:
+
+   *   no new image format definition required.
+   *   it is not possible to inform the driver routines, that no metadata output is expected.
+   *   the image driver function must take care about shared object and create a copy on modification. Thus, a pointer to an object pointer must be passed.
+   *   a metadata must be prepared even if there is no metadata and cleaned after each match round.
+
+This solution was not chosen due to the complicated way to set a metadata dict by the format driver functions.
+In addition, it is seen as valueable, that the information "no metadata output, please" may be transmitted.
+
+The implementation is in branch "tip-529-image-metadata-jan".
 
 # Discussion
 
@@ -493,6 +389,168 @@ How do you want to handle the physical resolution (DPI) in the case of image sca
 Just keep the original DPI value or adjust the DPI values automatically, maybe using an option.
 
 HaO: Currently, this is not prevued and may be implemented by another TIP.
+
+# Optional parts of the TIP
+
+Within the last two years development process, the following additional ideas were implemented in addition.
+They are all implemented in the tk branch "tip-529-image-metadata-optional".
+They are not included in the TIP and not included in the main implementation.
+People may speak up to get any feature back in the main feature branch.
+
+The optional features are:
+
+   *   Implement XMP metadata type for gif.
+   *   Optimize the SVG processing to store the preparsed binary blob in the metadata. This blob may be used for fast scaling of the image.
+   *   Optimize driver internal communication: provide a DString memory to the image format driver to pass data from the match functions to the read functions.
+   *   Optimize file access: allow the image driver to indicate, that the file is not needed any more after the match call.
+
+The following subchapter discuss the optional features.
+The format driver interface with all options is shown in the last subchapter.
+
+## XMP data
+
+Photo images may contain an XMP data structure which may hold structured data.
+The aim is to make this data accessible.
+The parsing of the XML structure is not part of this TIP and may be done by other packages.
+
+The metadata key is:
+
+| Key       | Description      | Example image formats |
+|:---------:|:----------------:|:---------------------:|
+| `XMP`     | xmp image data   | gif,png               |
+
+XMP support is implemented for gif format.
+Due to missing use case, it was removed from the main branch.
+
+## SVG optimization by a metadata key holding the preparsed svg blob
+
+### Rationale
+
+The application is within the current SVG implementation included in Tk8.7a3.
+
+The used svg routines from the nanosvg project split svg processing into two steps:
+
+   *   Step 1: transform the xml data to a binary representation of the splines
+   *   Step 2: render the splines to an image presentation
+
+When svg files are loaded by:
+
+    image create photo i1 -file test.svg -format {svg -scaletoheight 16}
+
+then the file is accessed and the xml data loaded and processing step 1 and 2 is performed.
+
+When the image is scaled by:
+
+    i1 configure -file "" -data {<svg source="metadata" >} -format {svg -scaletoheight 32}
+
+then the same steps are performed as on image load, while only step 2 would be necessary.
+The performance is poor and the file must still be available.
+
+The idea is to store the binary representation of the splines (result of processing step 1) as a key in the **-metadata** dict (say SVGBLOB) and to achieve to only perform step 2 on scaling.
+
+In addition, svg image may even be "compiled" to the metadata structure, so the following command may work:
+
+    image create i1 -metadata {SVGBLOB ...}  -data {<svg source="metadata" >}-format {svg -scaletoheight 32}
+
+This will only work within the same patchlevel of TK on the same architecture (endianess, int size) , as the format may change, but it may be useful for example when packing to a starkit.
+
+In my talk on ETCL 2019, I showed an Android GUI where buttons may be scaled by a pinch to zoom gesture. The current performance is quite poor.
+
+### Specification
+
+The svg driver returns a preparsed image blob in the metadata key "SVGBLOB".
+This data is used as image data, if the -data parameter contains the string "\<svg data=\"metadata\" />".
+
+A sample script is as follows:
+
+    image create photo foo -data $svggradient -format svg
+    foo configure -file "" -data "\<svg data=\\"metadata\\" />" -format "svg -scale 2"
+
+Internally, the driver uses the driver internal DString to communicate between the match and read functions.
+
+The output of the svg parser is serialized in arrays and put into the memory block.
+All functions of the rendering functions dealing with the input data are changed to use the array.
+
+### Discussion
+
+I see only a small speed-up (around 10%) by this solution.
+In addition, the version without this option is as fast as the optimized version.
+So, we have a slowdown for the normal case and no gain for the optimized version.
+
+My test script is as follows:
+
+   *   take the file from [https://svgstudio.com/pages/free-sample]
+   *   use the following script:
+   
+   image create photo foo -file Freesample.svg -format svg
+    proc switch {} {
+        foo configure -format {svg -scale 2}
+        foo configure -format {svg -scale 1}
+    }
+    time switch 100
+    40139.367 microseconds per iteration
+    
+    * now activate the use of the metadata
+    
+    foo configure -file "" -data "<svg data=\"metadata\" />" -format "svg"
+    38641.935 microseconds per iteration
+
+For me, even removing the file operations and the parsing should be a magnitude faster.
+But the facts are different.
+Apparently copying all this data around in addition takes a lot of time.
+And the svg-nano parser is super fast.
+And most processing time is taken by image rendering.
+
+## Match and read function communication memory
+
+The match functions and the image read functions get an additional parameter "driverInternalPtr" which points to an initialized DString.
+The DString is cleared by the framework.
+
+Using this DString, the driver match function may pass data to its read function.
+
+The rationale is the current implementation of the SVG driver:
+
+   *   The driver currently uses ThreadSpecific data to pass data from the match procedure to the read procedure. Due to that, a more simple alternate possibility is proposed.
+
+## Flag that the match function does not need the channel any more
+
+The driver file match function may flag, that it does not need the channel any more.
+Only in this case, the additional output int "closeChannel" should be set to 1.
+In this case, a NULL driver is passed to the read driver function.
+
+The rationale is the current implementation of the SVG driver:
+
+   *   The driver does not need the file any more after the match procedure. Thus, any preparing file operations (seek etc) may be omitted and a NULL channel may be passed.
+
+## Format driver interface with all options
+
+The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
+
+    int (Tk_ImageFileMatchProcVersion3) (Tcl_Interp *interp, Tcl_Channel chan,
+        const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr,
+        int *heightPtr, Tcl_Obj *metadataOut, int *closeChannelPtr,
+        Tcl_DString *driverInternalPtr);
+
+    int (Tk_ImageStringMatchProcVersion3) (Tcl_Interp *interp, Tcl_Obj *dataObj,
+        Tcl_Obj *format, Tcl_Obj *metadataIn, int *widthPtr, int *heightPtr,
+        Tcl_Obj *metadataOut, Tcl_DString *driverInternalPtr);
+
+    int (Tk_ImageFileReadProcVersion3) (Tcl_Interp *interp, Tcl_Channel chan,
+        const char *fileName, Tcl_Obj *format, Tcl_Obj *metadataIn,
+        Tk_PhotoHandle imageHandle,
+        int destX, int destY, int width, int height, int srcX, int srcY,
+        Tcl_Obj *metadataOut, Tcl_DString *driverInternalPtr);
+
+    int (Tk_ImageStringReadProcVersion3) (Tcl_Interp *interp, Tcl_Obj *dataObj,
+        Tcl_Obj *format, Tcl_Obj *metadataIn, Tk_PhotoHandle imageHandle,
+        int destX, int destY, int width, int height, int srcX, int srcY,
+        Tcl_Obj *metadataOut, Tcl_DString *driverInternalPtr);
+
+    int (Tk_ImageFileWriteProcVersion3) (Tcl_Interp *interp, const char *fileName,
+        Tcl_Obj *format, Tcl_Obj *metadataIn, Tk_PhotoImageBlock *blockPtr);
+
+    int (Tk_ImageStringWriteProcVersion3) (Tcl_Interp *interp, Tcl_sObj *format,
+        Tcl_Obj *metadataIn, Tk_PhotoImageBlock *blockPtr);
 
 # Copyright
 
