TIP 529 image metadata: add documentation remark proposal about the life cycle

--- a/tip/529.md
+++ b/tip/529.md
@@ -332,6 +332,16 @@ The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
     int (Tk_ImageStringWriteProcVersion3) (Tcl_Interp *interp, Tcl_sObj *format,
             Tcl_Obj *metadataIn, Tk_PhotoImageBlock *blockPtr);
 
+## Documentation
+
+The manual page of "Tk_CreatePhotoImageFormat" will describe the new version 3 interface.
+The following remark about the life cycle of the interfaces is added in a similar way as the current remark about the version 1 (old) interface:
+
+Version 3 format driver interface is recommended for new projects.
+Expect version 2 format driver interface and the command Tk_PhotoImageFormat to be removed with Tk 9.0.
+
+In addition, it might be a good idea to speak about version 1 (old), version 2 and version 3 interface.
+
 # Implementation
 
 Implementation is in branch "tip-529-image-metadata".
@@ -347,24 +357,6 @@ In addition, the TkImg package features additional tests for this patch which ex
 The TkImg patch links currently against the optional branch (see below), not against the branch tag tip-529-image-metadata.
 
 It was necessary to fix the file tests/earth.gif as the file is incomplete.
-
-# Rejected Alternatives
-
-## single metadata parameter for input and output
-
-A first approach was to use one metadata parameter to the format driver functions which allowed combined input and output.
-The properties are:
-
-   *   no new image format definition required.
-   *   it is not possible to inform the driver routines, that no metadata output is expected.
-   *   the image driver function must take care about shared object and create a copy on modification. Thus, a pointer to an object pointer must be passed.
-   *   a metadata must be prepared even if there is no metadata and cleaned after each match round.
-
-This solution was not chosen due to the complicated way to set a metadata dict by the format driver functions.
-In addition, it is seen as valueable, that the information "no metadata output, please" may be transmitted.
-
-The implementation is in branch "tip-529-image-metadata-jan".
-
 # Discussion
 
 ## image find command planned by Paul Obermeier
@@ -390,7 +382,7 @@ Just keep the original DPI value or adjust the DPI values automatically, maybe u
 
 HaO: Currently, this is not prevued and may be implemented by another TIP.
 
-# Optional parts of the TIP
+# Rejected Alternatives
 
 Within the last two years development process, the following additional ideas were implemented in addition.
 They are all implemented in the tk branch "tip-529-image-metadata-optional".
@@ -405,7 +397,9 @@ The optional features are:
    *   Optimize file access: allow the image driver to indicate, that the file is not needed any more after the match call.
 
 The following subchapter discuss the optional features.
-The format driver interface with all options is shown in the last subchapter.
+The format driver interface with all options is shown in a following additional subchapter.
+
+Another rejected alternative to use only one metadata pointer in the interface is following as last subchapter.
 
 ## XMP data
 
@@ -551,6 +545,21 @@ The function parameters in Tk_PhotoImageFormatVersion3 are as follows:
 
     int (Tk_ImageStringWriteProcVersion3) (Tcl_Interp *interp, Tcl_sObj *format,
         Tcl_Obj *metadataIn, Tk_PhotoImageBlock *blockPtr);
+
+## Single metadata parameter for input and output
+
+A first approach was to use one metadata parameter to the format driver functions which allowed combined input and output.
+The properties are:
+
+   *   no new image format definition required.
+   *   it is not possible to inform the driver routines, that no metadata output is expected.
+   *   the image driver function must take care about shared object and create a copy on modification. Thus, a pointer to an object pointer must be passed.
+   *   a metadata must be prepared even if there is no metadata and cleaned after each match round.
+
+This solution was not chosen due to the complicated way to set a metadata dict by the format driver functions.
+In addition, it is seen as valueable, that the information "no metadata output, please" may be transmitted.
+
+The implementation is in branch "tip-529-image-metadata-jan".
 
 # Copyright
 
