TIP529 image metadata: Discussion about usability of optional features.

--- a/tip/529.md
+++ b/tip/529.md
@@ -382,6 +382,11 @@ Just keep the original DPI value or adjust the DPI values automatically, maybe u
 
 HaO: Currently, this is not prevued and may be implemented by another TIP.
 
+## No use of other optional features by Paul Obermeier
+
+I asked Paul, if he sees any use of the optional features below for him or TkImg.
+The answer was: no, I don't see any use.
+
 # Rejected Alternatives
 
 Within the last two years development process, the following additional ideas were implemented in addition.
