TIP529 image metadata: add clarification on -format options and -metadata

--- a/tip/529.md
+++ b/tip/529.md
@@ -203,7 +203,7 @@ Example:
     % myimage cget -metadata
     Comment "Comment from image create"
 
-## myimage read
+### myimage read
 
 The read command sets (parts of) the image data by new image data read from a file.
 This command acts like the put command with the difference, that the image data comes from a file.
@@ -229,7 +229,7 @@ Example:
     % myimage cget -metadata
     Comment "Comment from image create"
 
-## myimage data
+### myimage data
 
 The data command writes the image data into a variable.
 
@@ -250,7 +250,7 @@ Example to specify the comment with the command options
     % myimage data -format "GIF"-metadata [dict create Comment "Comment from data command"]
     ... GIF data with comment included
 
-## myimage write
+### myimage write
 
 The write command writes the image data to a file.
 With respect to metadata, it works the same way as the data command.
@@ -261,11 +261,25 @@ Example to write a metadata comment:
     % myimage write GifwithComment.gif -format "GIF"-metadata [dict create Comment "Comment from write command"]
     ... GIF data with comment included
 
+### Notes on Options to image and metadata creation
+
+The metadata is not suited to pass processing options to the driver.
+For this aim, options should be added to the "-format" option.
+
+In contrast, a driver may understand options passed by the "-format" option to modify its metadata processing.
+
+Lets try the following imaginary example:
+An image driver contains a full EXIF parser which creates many keys as output.
+This processing is expensive in processing time and output data creation.
+In consequence, the driver creator may decide to only create the EXIF output on a given option:
+
+    image create photo photo.jpg -format "jpg -exif 1"
+
 ## Image format driver interface
 
 The image format driver interface is changed in the following aspects:
 
-## Pass metadata dict as parameter
+### Pass metadata dict as parameter
 
 Each driver function gets a tcl object pointer "metadataIn" as parameter.
 This parameter serves to input a metadata dict to the driver function.
