TIP #578 voting final

--- a/tip/578.md
+++ b/tip/578.md
@@ -1,13 +1,17 @@
 # TIP 578: Death to TCL_DBGX
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        10-June-2020
 	Post-History:   
 	Keywords:       Tcl index
 	Tcl-Version:    8.7
 	Tcl-Branch:     death-to-dbgx
+	Vote-Summary:   Accepted 6/0/0
+	Votes-For:      AK, DKF, FV, JN, KW, SL
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
