--- a/tip/577.md
+++ b/tip/577.md
@@ -66,8 +66,8 @@ list index out of range
     Various commands use `-1` to indicate "just before the first" and `end+1` for "just after the last",
     those usages will continue to be work as it worked before.
   * For Tk, start accepting all those same values as indices for entries, listboxes, menus .....
-    and also for button and menu-related `-underline` options. A new TK_OPTION_INDEX option is implemented,
-    which is almost the same as TK_OPTION_INT, but in stead of only integers, accepts all index forms as well. 
+    and also for button and menu-related `-underline` options. A new `TK_OPTION_INDEX` option is implemented,
+    which is almost the same as `TK_OPTION_INT`, but in stead of only integers, accepts all index forms as well. 
     See:  [`widgets indices enhancement`](https://core.tcl-lang.org/tk/tktview?name=1ef1ae2177)
 
 # Compatibility
@@ -82,6 +82,8 @@ will immediately result in an "index out of range" error, in stead of being sile
 # Implementation
 
 See the [`strict-index`](https://core.tcl-lang.org/tcl/timeline?r=strict-index) branch.
+
+For Tk, see the [`strict-index`](https://core.tcl-lang.org/tk/timeline?r=strict-index) branch.
 
 # Copyright
 
