More textual tweaks

--- a/tip/577.md
+++ b/tip/577.md
@@ -48,6 +48,22 @@ d b c
 list index out of range
 </pre>
 
+Changing any of the above examples to give a different answer is not possible in the Tcl 8.x timeline,
+as it could cause applications to break unexpectedly. But this examples make it clear that the
+responses `-1` and `none` are used often to mean the same thing. For Tcl 9 more can be done, but
+more investigation is needed to determine whether `none` or maybe the empty string would be a
+better fit here. Also, whether a command gives an error-message on an invalid index or bails out
+cannot be changed in the Tcl 8.x timeline.
+
+Since they are often causes of bugs, this TIP makes the step to deprecate
+the use of indices < `-1` and > `end+1`. Such indices normally result from
+code loops which don't properly check for the end condition. Therefore,
+those indices will no longer be valid indices in Tcl 9.
+
+It would be tempting to change Tcl 9 such that `none` or the empty string is used
+as return value in stead of `-1`. That change is _not_ made yet in this TIP,
+more experimenting is needed to determine the impact that would have.
+
 # Specification
 
   * The C function `Tcl_GetIntForIndex()` will get an additional `flags` parameter, which holds any combination of
@@ -58,13 +74,11 @@ list index out of range
     The default flag value 0, will behave as-is now, accepting all forms as valid. Starting with Tcl 9.0,
     all internal `Tcl_GetIntForIndex()` calls will at least supply the `TCL_INDEX_ERROR` flag value
     to this function.
-  * Values "none" and "" (empty string) are now valid indices, representing "just before the first".
+  * Values `none` and the empty string are now valid indices, representing "just before the first".
     Commands that accept either a single index or a list of indices will handle the empty string as empty list,
     not as a single index.
   * New functions "string is none" and "string is index". 
   * Starting with Tcl 9.0, integers < `-1` and forms `end+x` where x > 1 will no longer be valid indexes any more.
-    Various commands use `-1` to indicate "just before the first" and `end+1` for "just after the last",
-    those usages will continue to be work as it worked before.
   * For Tk, start accepting all those same values as indices for entries, listboxes, menus .....
     and also for button and menu-related `-underline` options. A new `TK_OPTION_INDEX` option is implemented,
     which is almost the same as `TK_OPTION_INT`, but in stead of only integers, accepts all index forms as well. 
