--- a/tip/580.md
+++ b/tip/580.md
@@ -1,13 +1,15 @@
-# TIP 577: Export Tk_GetDoublePixelsFromObj and 4 more
+# TIP 580: Export Tk_GetDoublePixelsFromObj and 4 more
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
+	Vote:           Pending
 	Created:        14-July-2020
 	Post-History:
-	Keywords:       export
+	Tcl-Version:    8.7
 	Tk-Version:     8.7
+	Keywords:       export
 	Tk-Branch:      tip-580
------
+------
 
 # Abstract
 
