Fix example in TIP #496 (placeholder in entries)

--- a/tip/496.md
+++ b/tip/496.md
@@ -42,14 +42,14 @@ Documentation updates are in the same branch.
 
 	    package require Tk
 	    # tk entry
-	    grid [::ttk::entry .e];#normal display
+	    grid [::tk::entry .e];#normal display
 	    .e configure -placeholder test;#display text is: test
 	    .e configure -placeholderforeground red;#display text is now red
 	    .e insert end xxx;#display text is xxx, color is black
 	    .e configure -textvariable a; set a yyy;##display text is yyy
 	    set a {};#display text is test, color is red
 	    # ttk entry
-	    ttk::entry .e1
+	    grid [ttk::entry .e1]
 	    ttk::style configure TEntry -placeholderforeground red
 	    .e1 configure -placeholder test
 
