--- a/tip/580.md
+++ b/tip/580.md
@@ -17,9 +17,9 @@ Export 5 new functions from the public stub table.
 
 # Rationale
 
-Those exports are meant to be used by the revised_text widget. The reason this new text replacement widget
-is currently integrated into Tk is because Tk doesn't export some symbols needed by revised_text. Those
-5 additional exports allow revised_text - finally - to be compiled separate from Tk.
+Those exports are meant to be used by the revised\_text widget. The reason this new text replacement widget
+is currently integrated into Tk (in a separate branch) is because Tk doesn't export some symbols needed by
+revised\_text. Those 5 additional exports allow revised\_text - finally - to be compiled separate from Tk.
 
 # Specification
 
