--- a/tip/580.md
+++ b/tip/580.md
@@ -40,7 +40,7 @@ This is 100% upwards compatible.
 
 # Implementation
 
-See the [`strict-index`](https://core.tcl-lang.org/tk/timeline?r=tip-580) branch.
+See the [`tip-580`](https://core.tcl-lang.org/tk/timeline?r=tip-580) branch.
 
 # Copyright
 
