New TIP #581.  Move TIP #579 to 8.7

--- a/tip/579.md
+++ b/tip/579.md
@@ -5,9 +5,9 @@
 	Vote:           Pending
 	Created:        07-Jul-2020
 	Post-History:
-	Tcl-Version:    8.6
+	Tcl-Version:    8.7
 	Keywords:       safe interp auto_path access_path
-	Tcl-Branch:     tip-579-8-6 tip-579-8-7
+	Tcl-Branch:     tip-579-8-7
 ------
 
 # Abstract
@@ -199,7 +199,7 @@ do not concern packages.
 
 # Reference Implementation
 
-Branches TIP-579-8-6 and TIP-579-8-7 in the public fossil repository for Tcl.
+Branches TIP-579-8-7 in the public fossil repository for Tcl.
 
 # Compatibility
 
